# kaggle-environments-0.1.4

./: .gcloudignore  .gitignore  CONTRIBUTING.md  ConnectX_RL_README.md  MANIFEST.in  MULTIPROCESSING_SUMMARY.md  README.md  REWARD_SHAPING_GUIDE.md  TRAINING_GUIDE.md  ai_battle_visualizer.py  anti_stagnation_upgrade_report.md  batch_dump_and_battle.py  batch_dump_and_battle_original.py  c4solver_wrapper.py  check_model_size.py  check_weights.py  clean_dir.py  code_refactoring_report.md  connectx_training_with_battles.ipynb  debug_ai.py  debug_env.py  debug_training_states.py  demo_improvement.py  demo_multiprocessing.py  dump_battle_checkpoints.py  dump_to_pickle.py  dump_weight_fixed_v2.py  dump_weight_optimized.py  encoding_comparison.py  fix_training_issues.py  generate_optimized_submission.py  human_vs_ai_cli.py  human_vs_ai_game.py  human_vs_ai_lookup_qt.py  human_vs_ai_qt.py  imitation_config.yaml  imitation_learning.py  integrate_perfect_system.py  main.py  memory_analysis.py  (+40 more)
markdown/: CUSTOM_REWARD_INTEGRATION.md  ConnectX_RL_README.md  HUMAN_VS_AI_GUIDE.md  IMITATION_TRAINING_GUIDE.md  MULTIPROCESSING_SUMMARY.md  PERFECT_IMITATION_GUIDE.md  PERFECT_SYSTEM_GUIDE.md  TENSOR_OPTIMIZATION_REPORT.md  attention_optimization_report.md  multiprocessing_fix_report.md  tactical_opponent_guide.md  update_policy_integration_report.md  visualization_test_report.md
policies/: cnn_features.py  param_utils.py  resnet_features.py  transformer_features.py
submi/: main.py
